# quasi_japanese_reviews

./: CITATION.cff  Makefile  README.md  package-lock.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/scud/spot/: quasi_spot.Example.jsonl
data/text/hotel/: quasi_japanese_reviwes.hotel.00000.tsv  quasi_japanese_reviwes.hotel.00000.txt  quasi_japanese_reviwes.hotel.00001.tsv  quasi_japanese_reviwes.hotel.00001.txt  quasi_japanese_reviwes.hotel.00002.tsv  quasi_japanese_reviwes.hotel.00002.txt  quasi_japanese_reviwes.hotel.00003.tsv  quasi_japanese_reviwes.hotel.00003.txt  quasi_japanese_reviwes.hotel.00004.tsv  quasi_japanese_reviwes.hotel.00004.txt  quasi_japanese_reviwes.hotel.00005.tsv  quasi_japanese_reviwes.hotel.00005.txt  quasi_japanese_reviwes.hotel.00006.tsv  quasi_japanese_reviwes.hotel.00006.txt  quasi_japanese_reviwes.hotel.00007.tsv  quasi_japanese_reviwes.hotel.00007.txt  quasi_japanese_reviwes.hotel.00008.tsv  quasi_japanese_reviwes.hotel.00008.txt  quasi_japanese_reviwes.hotel.00009.tsv  quasi_japanese_reviwes.hotel.00009.txt  quasi_japanese_reviwes.hotel.00010.tsv  quasi_japanese_reviwes.hotel.00010.txt  quasi_japanese_reviwes.hotel.00011.tsv  quasi_japanese_reviwes.hotel.00011.txt  quasi_japanese_reviwes.hotel.00012.tsv  quasi_japanese_reviwes.hotel.00012.txt  quasi_japanese_reviwes.hotel.00013.tsv  quasi_japanese_reviwes.hotel.00013.txt  quasi_japanese_reviwes.hotel.00014.tsv  quasi_japanese_reviwes.hotel.00014.txt  quasi_japanese_reviwes.hotel.00015.tsv  (+983 more)
src/: validate_count.py  vus2text.py
tests/: test_general.py
(+504 files in other folders)
